azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__directive-9.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..6
      Directive@0..6
        DirectiveToken@0..1 "%"
        ReservedDirective@1..4
          DirectiveName@1..4 "DIR"
        InlineSeparator@4..6 "  "
    ,
    errors: [],
}
