azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive-10.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Root@0..8
      Directive@0..8
        DirectiveToken@0..1 "%"
        DirectiveName@1..8 "DIR#dir"
    ,
    errors: [],
}
