azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive-13.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Root@0..13
      Directive@0..13
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "DIR"
        InlineSeparator@4..5 " "
        DirectiveParameter@5..13 "arg1#arg"
    ,
    errors: [],
}
