azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive-14.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Root@0..18
      Directive@0..18
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "DIR"
        InlineSeparator@4..5 " "
        DirectiveParameter@5..9 "arg1"
        InlineSeparator@9..10 " "
        CommentText@10..18
          CommentToken@10..11 "#"
          CommentBody@11..18 "comment"
    ,
    errors: [],
}
