azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive-2.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Directive@0..9
      DirectiveToken@0..1 "%"
      DirectiveName@1..5 "YAML"
      DirectiveParameter@5..9 "1.2#"
    ,
    errors: [],
}
