azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive-4.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Directive@0..27
      DirectiveToken@0..1 "%"
      DirectiveName@1..5 "YAML"
      DirectiveParameter@5..8 "1.2"
      CommentToken@8..9 "#"
      CommentText@9..17 "#comment"
      CommentToken@17..18 "#"
      CommentText@18..27 "#comment2"
    ,
    errors: [],
}
